# Skidbladnir

./: .editorconfig  Directory.Build.props  LICENSE  README.md  Skidbladnir.sln  Skidbladnir.sln.DotSettings  Skidbladnir.slnx  azure-pipelines.yml  global.json  nuget.config
.azurepipelines/: build.yml  mirror.yml  release.yml
.azurepipelines/mirror/: mirror.ps1  mirror.yml
.azurepipelines/scripts/: mirror.ps1
.azurepipelines/scripts/mirror/: azuredevops_github.ps1
.github/workflows/: codeql-analysis.yml  dotnet.yml
Core/: Class1.cs  Core.csproj
OSUtils/: NativeMethods.cs  OSUtils.csproj
OSUtils/Windows/Registry/: RegKey.cs  RegPath.cs
src/Common/: Common.csproj
src/Common/File/: Checksum.cs
src/Common/Interop/: InteropTypeExtension.cs  UnmanagedClass.cs  UnmanagedLibrary.cs
src/Core/: Directory.Build.props
src/Core/Extension/: BinaryFormatting.cs  CastExtension.cs  Extension.csproj
src/IO/: Directory.Build.props
src/IO/File/: Checksum.cs  Deletion.cs  File.csproj  IOExtension.cs
src/Interop/: Directory.Build.props
src/Interop/Extension/: CastExtension.cs  ConversionExtension.cs  Extension.csproj
src/Interop/Process/: Git.cs  Process.csproj  ProcessExitInfo.cs
src/Net/: Directory.Build.props
src/Net/DevOps/: AzureRepositoryInfo.cs  DevOps.csproj  DevOpsExtensions.cs  GithubRepositoryInfo.cs  RepositoryInfo.cs  RestApiClient.cs  SyncCode.cs  SyncCodePSCmdlet.cs
src/OS/: Directory.Build.props  NativeMethods.cs  OS.csproj
src/OS/Windows/: Directory.Build.props  NativeMethods.cs  (+1 more)
src/Skidbladnir/: Skidbladnir.csproj
src/cpp/: CMakeLists.txt  build.ps1  build.sh
src/cpp/cmake/: cross.cmake
src/cpp/include/: OpenSSLWrapper.hpp  Wrapper.hpp
src/cpp/src/: OpenSSLWrapper.cpp  Wrapper.cpp
test/: Directory.Build.props
test/CommonTest/: CommonTest.csproj  UnitTest1.cs
test/CommonTests/: CommonTests.csproj
test/Experiment/: Experiment.csproj  Program.cs
test/IO/: Directory.Build.props
test/Net/: Directory.Build.props
test/OSTest/: OSTest.csproj  UnitTest1.cs
test/OSTests/: OSTests.csproj
(+72 files in other folders)
